sucessful api call Co-authored-by: Jacob Maier<jacobamaier@gmail.com> AND Kai Clausen<kaiclausen123@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
 
-  <title>Document</title>
+  <title>Stock Retriever</title>
 </head>
 <body>
-  
+  <form>
+    <label for="ticker-input">Your ticker Input</label>
+    <input type="text" id="ticker-input" name="ticker-input">
+    <button type="submit">Submit</button>
+  </form>
+  <p id="results"></p>
 </body>
 </html>
+
