add function to show news ticker on bottom of page

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
   <title>Stock Retriever</title>
 </head>
 <body>
@@ -11,6 +10,11 @@
     <button type="submit">Submit</button>
   </form>
   <p id="results"></p>
+  <footer>
+  <div news-container>
+    <p id="news-headline">Text</p>
+  </div>
+  </footer>
 </body>
 </html>
 
