add print news function that scrolls clickable articles on footer

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <p id="results"></p>
   <footer>
   <div news-container>
-    <p id="news-headline">Text</p>
+    <p id="news-headline">Headlines: <a href="https://www.marketwatch.com/">Market Watch</a></p>
   </div>
   </footer>
 </body>
