--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <p id="results"></p>
   <footer>
   <div news-container>
-    <p id="news-headline">Headlines: <a href="https://www.marketwatch.com/">Market Watch</a></p>
+    <p id="news-headline">Headlines: <a href="https://www.marketwatch.com/">Market Watch</a>   ||   <a href="https://finance.yahoo.com/?guccounter=1&guce_referrer=aHR0cHM6Ly93d3cuZ29vZ2xlLmNvbS8&guce_referrer_sig=AQAAAG1BIhi8ExccI8yR9dwqfgPHfolflJBLodpY352iUJygOXvxgK9CiKOwgEuAv6B9gcrdkb4mjGV7iPSRANCbKzzQB_3aosLywYgRe32btIvTByLzhZkRlbjsjlHQxcPAG7Zd3Z-1Ddrw6ga8pmI7NdJA_5xn6zMliw75jp3D2j9Q">Yahoo Finance</a>   ||   <a href="https://www.nasdaq.com/">NASDAQ</a></p>
   </div>
   </footer>
 </body>
