update README to include description, tech used, and setup requirements

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,19 @@
   <title>Stock Retriever</title>
 </head>
 <body>
+  <div class="container">
+    <div class="container-intro">Header</div>
+    <div class="container-left">Left Display</div>
+  <div class="container-form">
   <form>
     <label for="ticker-input">Your ticker Input</label>
     <input type="text" id="ticker-input" name="ticker-input">
     <button type="submit">Submit</button>
   </form>
   <p id="results"></p>
+</div>
+<div class="container-right">Right Display</div>
+</div>
   <footer>
   <div news-container>
     <p id="news-headline">Headlines: <a href="https://www.marketwatch.com/">Market Watch</a>   ||   <a href="https://finance.yahoo.com/?guccounter=1&guce_referrer=aHR0cHM6Ly93d3cuZ29vZ2xlLmNvbS8&guce_referrer_sig=AQAAAG1BIhi8ExccI8yR9dwqfgPHfolflJBLodpY352iUJygOXvxgK9CiKOwgEuAv6B9gcrdkb4mjGV7iPSRANCbKzzQB_3aosLywYgRe32btIvTByLzhZkRlbjsjlHQxcPAG7Zd3Z-1Ddrw6ga8pmI7NdJA_5xn6zMliw75jp3D2j9Q">Yahoo Finance</a>   ||   <a href="https://www.nasdaq.com/">NASDAQ</a></p>
